--- a/templates/usersTpl.html
+++ b/templates/usersTpl.html
@@ -1,8 +1,9 @@
-<div class="row">
-  <div class="small-6 columns">6 columns</div>
-  <div class="small-6 columns">6 columns</div>
-</div>
-<div class="row">
-  <div class="medium-6 large-4 columns">12/6/4 columns</div>
-  <div class="medium-6 large-8 columns">12/6/8 columns</div>
+
+<div class="row users">
+  <div class="medium-6 large-4 columns">
+    <users-list></users-list>
+  </div>
+  <div class="medium-6 large-8 columns">
+    <ui-view></ui-view>
+  </div>
 </div>
