working on single user

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -5,3 +5,16 @@
 body{
   background-color: $light-gray;
 }
+.no-js .top-bar {
+  display: none;
+}
+
+@media screen and (min-width: 40em) {
+  .no-js .top-bar {
+    display: block;
+  }
+
+  .no-js .title-bar {
+    display: none;
+  }
+}
