--- a/templates/aboutTpl.html
+++ b/templates/aboutTpl.html
@@ -1,1 +1,59 @@
-<h1>About</h1>
+<header class="about-header">
+  <div class="overlay"></div>
+  <div class="row">
+    <div class="columns">
+      <h1><i class="fi-social-github"></i> Github Users</h1>
+
+    </div>
+  </div>
+</header>
+<div class="row">
+  <div class="columns">
+    <h2>About Github Users</h2>
+    <h2 class="subheader"> History</h2>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+  </div>
+</div>
+<div class="row center">
+  <div class="columns small-8">
+    <h2 class="subheader"> News</h2>
+
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+  </div>
+  <div class="columns small-4">
+    <img class='thumbnail' src="dist/imgs/img1.jpg" alt="">
+  </div>
+</div>
+<div class="row center quotes">
+  <div class="columns small-12 text-left">
+    <h2 class="subheader"> Team</h2>
+
+
+  </div>
+  <div class="columns medium-4">
+    <div class="img">
+      <img src="dist/imgs/1.jpg" alt="">
+    </div>
+    <div class="text">
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's </p>
+    </div>
+  </div>
+  <div class="columns medium-4">
+    <div class="img">
+      <img src="dist/imgs/2.jpg" alt="">
+    </div>
+    <div class="text">
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's </p>
+    </div>
+  </div>
+  <div class="columns medium-4">
+    <div class="img">
+      <img src="dist/imgs/3.jpg" alt="">
+    </div>
+    <div class="text">
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's </p>
+    </div>
+  </div>
+</div>
