--- a/src/sass/top-bar.scss
+++ b/src/sass/top-bar.scss
@@ -1,10 +1,15 @@
 .top-bar {
-  margin-bottom: 20px;
   background-color: $primary-color;
 
   ul{
     background-color: $primary-color;
     li{
+      &.active{
+        a{
+          background-color: rgba(0,0,0,0.3)
+
+        }
+      }
       color:#fff;
 
       a{
@@ -13,4 +18,14 @@
     }
   }
 
+}
+
+@media screen and (min-width: 40em) {
+   .top-bar {
+    display: block;
+  }
+
+   .title-bar {
+    display: none;
+  }
 }
