--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -1,3 +1,6 @@
+/*------------------------------------*\
+  Home Page
+\*------------------------------------*/
 header{
   background-image: url("../imgs/github.jpg");
   height: 500px;
