--- a/src/sass/top-bar.scss
+++ b/src/sass/top-bar.scss
@@ -1,3 +1,6 @@
+/*------------------------------------*\
+  Top Header
+\*------------------------------------*/
 .top-bar {
   background-color: $primary-color;
 
