--- a/src/sass/user.scss
+++ b/src/sass/user.scss
@@ -1,3 +1,6 @@
+/*------------------------------------*\
+  Single User
+\*------------------------------------*/
 .singleuser{
   .row{
     align-items: center;
