--- a/src/sass/about.scss
+++ b/src/sass/about.scss
@@ -1,3 +1,6 @@
+/*------------------------------------*\
+  About Page
+\*------------------------------------*/
 .about-header{
   height: 200px;
   background-attachment: scroll;
