--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -1,3 +1,6 @@
+/*------------------------------------*\
+  Footer
+\*------------------------------------*/
 footer{
   background-color: #333;
   color: #fff;
@@ -8,6 +11,7 @@ footer{
       a{
         color: #fff;
       }
+
     }
   }
   .social-icons{
@@ -18,5 +22,9 @@ footer{
         margin-right: 10px;
       }
     }
+  }
+  p{
+    padding: 0;
+    margin: 0;
   }
 }
