--- a/templates/usersTpl.html
+++ b/templates/usersTpl.html
@@ -2,7 +2,7 @@
 <div class="row users">
   <div class="medium-6 large-4 columns">
     <users-list></users-list>
-    <button type="button" ng-click='loadMore()' class="button small expanded" name="button">Load More</button>
+    <button type="button" ng-click='loadMore(users.length-1)' class="button small expanded" name="button">Load More</button>
 
   </div>
   <div class="medium-6 large-8 columns ">
